--- a/Drawback/src/app/app.component.html
+++ b/Drawback/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Jamboard</a>
+      <a href="#" class="navbar-brand">Drawback</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
