Bad clear button works, will need to update/format code in future

--- a/Drawback/src/app/app.component.html
+++ b/Drawback/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a href="#">Some function</a>
+          <button (click)="clear()">Clear</button>
         </li>
       </ul>
     </div>
