--- a/Drawback/src/app/app.component.html
+++ b/Drawback/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <button (click)="clear()">Clear</button>
+          <a href="#" (click)="clear()">Clear</a>
         </li>
       </ul>
     </div>
