Undo button works

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
         <li>
           <a href="#" (click)="clear()">Clear Drawing</a>
         </li>
+        <li>
+          <a href="#" (click)="undo()">Undo</a>
+        </li>
         <li class="dropdown" appDropdown>
         <a href="#" role="button" class="dropdown-toggle" appDropdown>
           Colors <span class="caret"></span>
