--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,9 @@
         <li>
           <a href="#" (click)="undo()">Undo</a>
         </li>
+        <li>
+          <a href="#" (click)="erase()">Eraser</a>
+        </li>
         <li class="dropdown" appDropdown>
         <a href="#" role="button" class="dropdown-toggle" appDropdown>
           Colors <span class="caret"></span>
