Move everything in app.component to a new canvas.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,74 +1,2 @@
-<div *ngFor="let message of messages">
-    {{message}}
-</div>
-
-<input [(ngModel)]="message" (keyup)="$event.keyCode == 13 && sendDrawing()" />
-<button (click)="sendDrawing()">Send</button>
-<button (click)="sendDrawing()">Send Message</button>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="#" class="navbar-brand">Drawback</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="#" (click)="clear()">Clear Drawing</a>
-        </li>
-        <li>
-          <a href="#" (click)="undo()">Undo</a>
-        </li>
-        <li>
-          <a href="#" (click)="erase()">Eraser</a>
-        </li>
-        <li class="dropdown" appDropdown>
-        <a href="#" role="button" class="dropdown-toggle" appDropdown>
-          Colors <span class="caret"></span>
-        </a>
-          <ul class="dropdown-menu">
-            <li>
-              <a href="#" id="blue" (click)="change_color($event)">Blue <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Solid_blue.svg/225px-Solid_blue.svg.png" width="24px" height="19px" vertical-align:middle></a>
-            </li>
-            <li>
-              <a href="#" (click)="change_color($event)" id="black">Black <img src="http://www.color-hex.com/palettes/7449.png" width="24px" height="19px" vertical-align:middle> </a>
-            </li>
-            <li>
-              <a href="#" (click)="change_color($event)" id="green">Green <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Flag_of_Libya_%281977-2011%29.svg/2000px-Flag_of_Libya_%281977-2011%29.svg.png" width="24px" height="19px" vertical-align:middle></a>
-            </li>
-            <li>
-              <a href="#" (click)="change_color($event)" id="brown" >Brown <img src="https://i.pinimg.com/originals/34/a1/13/34a1137416f3b698eb4a9c67a1bc877b.jpg" width="24px" height="19px" vertical-align:middle></a>
-            </li>
-            <li>
-              <a href="#" (click)="change_color($event)" id="red" >Red<img src="https://vignette.wikia.nocookie.net/phobia/images/5/5a/Red.jpg/revision/latest?cb=20161109225243" width="24px" height="19px" vertical-align:middle></a>
-            </li>
-          </ul>
-        </li>
-        <li class="dropdown" appDropdown>
-        <a href="#" role="button" class="dropdown-toggle" appDropdown>
-          Pens <span class="caret"></span>
-        </a>
-          <ul class="dropdown-menu">
-            <li>
-              <a href="#" id="pen-1" (click)="change_pen($event)">Pen 1<img src="https://www.andacod.com/images/articles/compendium/methods/drawing/as1100/lines_linestyle/thickline.png" width="100px" height="25px" vertical-align:middle></a>
-            </li>
-            <li>
-              <a href="#" (click)="change_pen($event)" id="pen-2">Pen 2<img src="https://mpnforum.files.wordpress.com/2012/10/line-thick.jpg?w=375" width="100px" height="25px" vertical-align:middle> </a>
-            </li>
-            <li>
-              <a href="#" (click)="change_pen($event)" id="pen-3">Pen 3<img src="http://laoblogger.com/images/thick-black-line-clipart-7.jpg" width="100px" height="25px" vertical-align:middle></a>
-            </li>
-            <li>
-              <a href="#" (click)="change_pen($event)" id="pen-4" >Pen 4<img src="http://laoblogger.com/images/thick-black-line-clipart-6.jpg" width="100px" height="25px" vertical-align:middle></a>
-            </li>
-            <li>
-              <a href="#" (click)="change_pen($event)" id="pen-5" >Pen 5<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Counting_rod_horizontal_black_1.svg/1280px-Counting_rod_horizontal_black_1.svg.png" width="100px" height="25px" vertical-align:middle></a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<canvas id="jamboard" width="1000" height="500"></canvas>
-<script src="app.component.ts"></script>
+<div> Hello </div>
+<app-canvas></app-canvas>
