--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -7,13 +7,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav">
                 <li>
-                    <button (click)="clear()">Clear Drawing </button>
+                    <button (click)="clear()">Clear Drawing</button>
                 </li>
                 <li>
-                    <button onclick="undo()">Undo</button>
+                    <button (click)="undo()">Undo</button>
                 </li>
                 <li>
-                    <button onclick="erase()">Eraser</button>
+                    <button (click)="erase()">Eraser</button>
                 </li>
                 <li class="dropdown" appDropdown>
                     <a href="#" role="button" class="dropdown-toggle" appDropdown>
