--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -2,6 +2,36 @@
     background-color: gray;
 }
 
-canvas {
-    background-color: white;
+.canvas-container{
+    /* position: relative; */
+    width: 500px;
+    height: 500px;
+}
+
+#canvas {
+    position: absolute;
+}
+
+.toolbar {
+    position: absolute;
+    top: 20%;
+    width: 40px; /* Set a specific width */
+    background-color: #555; /* Dark-grey background */
+}
+
+.toolbar a {
+    display: block; /* Make the links appear below each other instead of side-by-side */
+    text-align: center; /* Center-align text */
+    padding: 10px; /* Add some padding */
+    transition: all 0.3s ease; /* Add transition for hover effects */
+    color: white; /* White text color */
+    font-size: 20px; /* Increased font-size */
+}
+
+.toolbar a:hover {
+    background-color: #000; /* Add a hover color */
+}
+
+.active {
+    background-color: #4CAF50; /* Add an active/current color */
 }
