--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,3 +1,6 @@
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -63,5 +66,15 @@
         </div>
     </div>
 </nav>
-<canvas id="jamboard" width="1000" height="500"></canvas>
-<script src="canvas.component.ts"></script>
+<!-- From https://www.w3schools.com/howto/howto_css_icon_bar.asp -->
+<div class="canvas-container">
+    <canvas id='canvas' width='1000px' height='500px'></canvas>
+    <div class="toolbar">
+        <a class="active"><i class="fa fa-pencil"></i></a>
+        <a><i class="fa fa-eraser"></i></a>
+        <a><i class="fa fa-paint-brush"></i></a>
+        <a><i class="fa fa-undo"></i></a>
+        <a><i class="fa fa-repeat"></i></a>
+        <a><i class="fa fa-trash"></i></a>
+    </div>
+</div>
