--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -70,11 +70,11 @@
 <div class="canvas-container">
     <canvas id='canvas' width='1000px' height='500px'></canvas>
     <div class="toolbar">
-        <a class="active"><i class="fa fa-pencil"></i></a>
-        <a><i class="fa fa-eraser"></i></a>
-        <a><i class="fa fa-paint-brush"></i></a>
-        <a><i class="fa fa-undo"></i></a>
-        <a><i class="fa fa-repeat"></i></a>
-        <a><i class="fa fa-trash"></i></a>
+        <a class="tool active"><i class="fa fa-pencil"></i></a>
+        <a class="tool"><i class="fa fa-eraser"></i></a>
+        <a class="tool"><i class="fa fa-paint-brush"></i></a>
+        <a class="tool"><i class="fa fa-undo"></i></a>
+        <a class="tool"><i class="fa fa-repeat"></i></a>
+        <a class="tool"><i class="fa fa-trash"></i></a>
     </div>
 </div>
