--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -17,6 +17,11 @@
     top: 20%;
     width: 40px; /* Set a specific width */
     background-color: #555; /* Dark-grey background */
+
+    /*  Remove bullet points from the ul tag */
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 .toolbar a {
@@ -28,11 +33,11 @@
     font-size: 20px; /* Increased font-size */
 }
 
-.toolbar a:hover {
+.tool:hover {
     background-color: #000; /* Add a hover color */
 }
 
 .active {
-    /* Add an active/current color and change to active color as soon as icon is clicked*/ 
+    /* Add an active/current color and change to active color as soon as icon is clicked*/
     background-color: #4CAF50 !important;
 }
