--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -9,9 +9,10 @@
 }
 
 #canvas {
-    position: absolute;
+    position: relative;
 }
 
+/* Toolbar CSS - Vertical bar of buttons for selecting each tool */
 .toolbar {
     position: absolute;
     top: 20%;
@@ -24,20 +25,54 @@
     margin: 0;
 }
 
+/* Icon images in the toolbar should be white and centered in its box */
 .toolbar a {
     display: block; /* Make the links appear below each other instead of side-by-side */
     text-align: center; /* Center-align text */
     padding: 10px; /* Add some padding */
-    /*transition: all 0.1s ease; /* Add transition for hover effects */
+    transition: all 0.3s ease; /* Add transition for hover effects */
     color: white; /* White text color */
     font-size: 20px; /* Increased font-size */
 }
 
+/* Tool icon backgrounds should turn black when mouse is hovering over it */
 .tool:hover {
-    background-color: #000; /* Add a hover color */
+    background-color: #000;
 }
 
+/* If the icon is selected, make the background green */
 .active {
     /* Add an active/current color and change to active color as soon as icon is clicked*/
     background-color: #4CAF50 !important;
+}
+
+/* Tooltip should be positioned relative to the tool icon */
+.tool-tip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted black;
+}
+
+/* Tooltip should start out hidden; when visible, it should have a black background */
+.tool-tip .tool-tip-text {
+    visibility: hidden;
+    width: 50px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+
+    /* Position the tooltip on top of the tool icon */
+    position: absolute;
+    z-index: 1;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -25px; /* Use half of the width (120/2 = 60), to center the tooltip */
+}
+
+/* Tooltip should be visible on hover */
+.tool-tip:hover .tool-tip-text {
+    font-size: 12px;
+    visibility: visible;
 }
