Canvas fills entire window and move toolbar to the right a little

--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -15,6 +15,7 @@
 /* Toolbar CSS - Vertical bar of buttons for selecting each tool */
 .toolbar {
     position: absolute;
+    left: 1%;
     top: 20%;
     width: 40px; /* Set a specific width */
     background-color: #555; /* Dark-grey background */
@@ -22,7 +23,6 @@
     /*  Remove bullet points from the ul tag */
     list-style-type: none;
     padding: 0;
-    margin: 0;
 }
 
 /* Icon images in the toolbar should be white and centered in its box */
