--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -6,6 +6,7 @@
     /* position: relative; */
     width: 500px;
     height: 500px;
+    background-color: gray;
 }
 
 #canvas {
@@ -67,21 +68,22 @@
 .dropdown-content {
     display: none;
     position: absolute;
+    top: 10px;
+    left: 50px;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 200px;
+    height: 30px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 /* Links inside the dropdown */
-.dropdown-content a span {
+.dropdown-content span {
     float: left; /* Float links side by side */
     text-align: center; /* Center-align text */
-    width: 20%; /* Equal width (5 icons with 20% width each = 100%) */
-    padding: 12px 0; /* Some top and bottom padding */
+    padding: 10px 10px; /* Size of the circle */
     transition: all 0.3s ease; /* Add transition for hover effects */
-    color: white; /* White text color */
-    font-size: 36px; /* Increased font size */
+    /* font-size: 36px; /* Increased font size */
 }
 
 /* Change color of dropdown links on hover */
@@ -96,7 +98,7 @@
 
 /* Show the dropdown menu on on click */
 .show .dropdown-content {
-    display: block;
+    display:inline-block;
 }
 
 
@@ -105,20 +107,19 @@
 .original-color {
     /* width: 10px;
     border-radius: 100%;
-    margin: 10px;
-    align-items: center; */
-    padding: 10px 11px;
-    background: green;
-    width: 1px;
+    margin: 10px;*/
+    align-items: left;
+    padding: 10px 10px;
     border-radius: 100%;
-    margin: 10px;
+    margin-top: 5px;
+    margin-left: 15px;
     width: 1%;
 }
 
 .pen-size {
-    width: 20px;
-    margin: 5px;
-    padding: 10px 11px;
+    /* width: 20px; */
+    /* margin: 5px; */
+    /* padding: 10px 11px; */
     color: black;
 }
 
