--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -13,6 +13,9 @@
                     <button (click)="undo()">Undo</button>
                 </li>
                 <li>
+                    <button (click)="redo()">Redo</button>
+                </li>
+                <li>
                     <button (click)="erase()">Eraser</button>
                 </li>
                 <li class="dropdown" appDropdown>
