--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,9 +1,8 @@
 html, body {
     overflow: hidden; /* Remove scrollbars to prevent offset drawings */
 }
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: gray;
+input {
+    background-color: transparent;
 }
 
 .canvas-container{
@@ -13,17 +12,24 @@ html, body {
     position: relative;
 }
 
-/* Toolbar CSS - Vertical bar of buttons for selecting each tool */
 .toolbar {
     position: absolute;
+    background-color: #555; /* Dark-grey background */
+}
+
+.toolbar-vertical {
     left: 1%;
     top: 20%;
     width: 40px; /* Set a specific width */
-    background-color: #555; /* Dark-grey background */
-
     /*  Remove bullet points from the ul tag */
     list-style-type: none;
     padding: 0;
+}
+
+.toolbar-horizontal {
+    left: 10%;
+    top: 2%;
+    padding:10px 15px 10px 10px
 }
 
 /* Icon images in the toolbar should be white and centered in its box */
@@ -51,9 +57,6 @@ html, body {
 
 /* DROPDOWN */
 .dropbtn {
-    color: white;
-    padding: 16px;
-    font-size: 16px;
     border: none;
     cursor: pointer;
 }
