--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -8,76 +8,13 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a href="#" class="navbar-brand">Drawback</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav navbar-nav">
-                <li>
-                    <button (click)="clear()">Clear Drawing</button>
-                </li>
-                <li>
-                    <button (click)="undo()">Undo</button>
-                </li>
-                <li>
-                    <button (click)="erase()">Eraser</button>
-                </li>
-                <li class="dropdown" appDropdown>
-                    <a role="button" class="dropdown-toggle" appDropdown>
-                        Colors <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a id="blue" (click)="change_color($event)"> Blue <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Solid_blue.svg/225px-Solid_blue.svg.png" width="24px" height="19px" vertical-align:middle></a>
-                        </li>
-                        <li>
-                            <a id="black" (click)="change_color($event)"> Black <img src="http://www.color-hex.com/palettes/7449.png" width="24px" height="19px" vertical-align:middle> </a>
-                        </li>
-                        <li>
-                            <a id="green" (click)="change_color($event)"> Green <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Flag_of_Libya_%281977-2011%29.svg/2000px-Flag_of_Libya_%281977-2011%29.svg.png" width="24px" height="19px" vertical-align:middle></a>
-                        </li>
-                        <li>
-                            <a id="brown" (click)="change_color($event)"> Brown <img src="https://i.pinimg.com/originals/34/a1/13/34a1137416f3b698eb4a9c67a1bc877b.jpg" width="24px" height="19px" vertical-align:middle></a>
-                        </li>
-                        <li>
-                            <a id="red" (click)="change_color($event)">Red<img src="https://vignette.wikia.nocookie.net/phobia/images/5/5a/Red.jpg/revision/latest?cb=20161109225243" width="24px" height="19px" vertical-align:middle></a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown" appDropdown>
-                    <a role="button" class="dropdown-toggle" appDropdown>
-                        Pens <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a id="pen-1" (click)="change_pen($event)">Pen 1<img src="https://www.andacod.com/images/articles/compendium/methods/drawing/as1100/lines_linestyle/thickline.png" width="100px" height="25px" vertical-align:middle></a>
-                        </li>
-                        <li>
-                            <a id="pen-2" (click)="change_pen($event)">Pen 2<img src="https://mpnforum.files.wordpress.com/2012/10/line-thick.jpg?w=375" width="100px" height="25px" vertical-align:middle> </a>
-                        </li>
-                        <li>
-                            <a id="pen-3" (click)="change_pen($event)">Pen 3<img src="http://laoblogger.com/images/thick-black-line-clipart-7.jpg" width="100px" height="25px" vertical-align:middle></a>
-                        </li>
-                        <li>
-                            <a id="pen-4" (click)="change_pen($event)">Pen 4<img src="http://laoblogger.com/images/thick-black-line-clipart-6.jpg" width="100px" height="25px" vertical-align:middle></a>
-                        </li>
-                        <li>
-                            <a id="pen-5" (click)="change_pen($event)">Pen 5<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Counting_rod_horizontal_black_1.svg/1280px-Counting_rod_horizontal_black_1.svg.png" width="100px" height="25px" vertical-align:middle></a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-<!-- From https://www.w3schools.com/howto/howto_css_icon_bar.asp -->
 <div class="canvas-container">
     <canvas id='canvas' width='1000px' height='500px'></canvas>
-    <ul class="toolbar">
+    <div id="title-box" class="toolbar toolbar-horizontal dropbtn">
+        <input type="text" value="Untitled Canvas">
+        <div class="toolbar-info">Placeholder for stuff</div>
+    </div>
+    <ul id="tool-selection-bar" class="toolbar toolbar-vertical">
         <li id="pen" class="tool active" (click)="selectPen()" style="color:red;">
             <a class="tool-tip">
                 <i class="fa fa-pencil">
