--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,142 +1,84 @@
-html, body {
-    overflow: hidden; /* Remove scrollbars to prevent offset drawings */
+html body {
+    font-family: sans-serif;
 }
-input {
-    background-color: transparent;
-}
-
-.canvas-container{
-}
-
 #canvas {
     position: relative;
+    cursor: crosshair;
 }
-
-.toolbar {
+.canvas-component {
     position: absolute;
-    background-color: #555; /* Dark-grey background */
-}
-
-.toolbar-vertical {
-    left: 1%;
-    top: 20%;
-    width: 40px; /* Set a specific width */
-    /*  Remove bullet points from the ul tag */
-    list-style-type: none;
-    padding: 0;
-}
-
-.toolbar-horizontal {
-    left: 10%;
-    top: 2%;
-    padding:10px 15px 10px 10px
-}
-
-/* Icon images in the toolbar should be white and centered in its box */
-.toolbar a {
-    display: block; /* Make the links appear below each other instead of side-by-side */
-    text-align: center; /* Center-align text */
-    padding: 10px; /* Add some padding */
-    transition: all 0.3s ease; /* Add transition for hover effects */
-    color: white; /* White text color */
-    font-size: 20px; /* Increased font-size */
-}
-
-/* Tool icon backgrounds should turn black when mouse is hovering over it */
-.tool:hover {
-    background-color: #000;
-}
-
-/* If the icon is selected, make the background green */
-.active {
-    /* Add an active/current color and change to active color as soon as icon is clicked*/
-    background-color: #4CAF50 !important;
-}
-
-
-
-/* DROPDOWN */
-.dropbtn {
-    border: none;
     cursor: pointer;
 }
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
+.flex-container {
+    display: flex;
+}
+.flex {
+    display: flex;
 }
 
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    top: 10px;
-    left: 50px;
-    background-color: #f9f9f9;
-    min-width: 200px;
-    height: 30px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+/* Header */
+.header-bar {
+    flex-direction: row;
+    display: flex;
+    top: 20px;
+    left:60px;
+    background-color: #f1f1f1;
+    border:1px solid #ddd;
+    border-radius:8px;
 }
-
-/* Links inside the dropdown */
-.dropdown-content span {
-    float: left; /* Float links side by side */
-    text-align: center; /* Center-align text */
-    padding: 10px 10px; /* Size of the circle */
-    transition: all 0.3s ease; /* Add transition for hover effects */
-    /* font-size: 36px; /* Increased font size */
+.title-box {
+    padding:10px 15px 10px 10px;
 }
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #f1f1f1
+.title-name {
+    background:0 0;
+    border:1px solid transparent;
+    padding:0 3px;
 }
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
-
-/* Show the dropdown menu on on click */
-.show .dropdown-content {
-    display:inline-block;
-}
-
-
-
-/* COLORS */
-.original-color {
-    /* width: 10px;
-    border-radius: 100%;
-    margin: 10px;*/
-    align-items: left;
-    padding: 10px 10px;
-    border-radius: 100%;
-    margin-top: 5px;
+.dropdown-symbol {
+    align-items: center;
     margin-left: 15px;
-    width: 1%;
+    padding-right: 15px;
+    border-right:1px solid #ddd
+}
+.copy-clipboard {
+    align-items: center;
+    margin-left: 15px;
+    padding-right: 15px;
 }
 
-.pen-size {
-    /* width: 20px; */
-    /* margin: 5px; */
-    /* padding: 10px 11px; */
-    color: black;
+/* Toolbar */
+.toolbar {
+    flex-direction: column;
+    top: 100px;
+    left: 10px;
+    width: 60px;
+    height: auto;
+    background-color: #555;
+    border-radius: 8px;
 }
-
-/* Tooltip should be positioned relative to the tool icon */
+.tool-button {
+    text-align: center;
+    padding: 10px;
+    margin: 5px;
+    color: white;
+    font-size: 20px;
+    transition: all 0.3s ease;
+}
+.tool-button:hover {
+    background-color: gray;
+    border-radius: 8px;
+}
+.active {
+    background-color: #4CAF50!important;
+    border-radius: 8px;
+}
 .tool-tip {
     position: relative;
     display: inline-block;
-    border-bottom: 1px dotted black;
 }
-
-/* Tooltip should start out hidden; when visible, it should have a black background */
-.tool-tip .tool-tip-text {
+.tool-tip-text {
     visibility: hidden;
-    width: 50px;
+    min-width: 50px;
     background-color: black;
     color: #fff;
     text-align: center;
@@ -150,9 +92,41 @@ input {
     left: 50%;
     margin-left: -25px; /* Use half of the width (120/2 = 60), to center the tooltip */
 }
-
-/* Tooltip should be visible on hover */
 .tool-tip:hover .tool-tip-text {
     font-size: 12px;
     visibility: visible;
+}
+.dropdown-carat {
+    position: absolute;
+    z-index: 2;
+    bottom: 1px;
+    right: 1px;
+    font-size: 1;
+}
+.dropdown-menu {
+    visibility: hidden;
+    position: absolute;
+    flex-direction: row;
+    justify-content: space-between;
+    top: 10px;
+    left: 60px;
+    background-color: #f9f9f9;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.show .dropdown-menu {
+    visibility: visible;
+}
+.dropdown-item {
+    text-align: center;
+    padding: 5px 10px;
+    margin: 0px 5px;
+    font-size: 20px;
+}
+.dropdown-item:hover {
+    background-color: gray;
+    border-radius: 8px;
+}
+.size-menu {
+    color: black;
 }
