--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -21,17 +21,30 @@ html body {
     display: flex;
     top: 20px;
     left:100px;
-    background-color: #f1f1f1;
+    background-color: #555;
     border:1px solid #ddd;
     border-radius:8px;
+    color: white;
+}
+.title-menu {
+    border-radius: 8px;
 }
 .title-box {
-    padding:10px 15px 10px 10px;
+    padding: 5px 10px 5px 10px;
+    margin-bottom: 5px;
 }
-.title-name {
-    background:0 0;
+.title-menu:hover {
+    background-color: gray;
+}
+.canvas-name {
+    background: 0 0;
     border: 1px solid transparent;
-    padding: 0 3px;
+    font-weight: bold;
+}
+.title-text {
+    padding: 0 2px;
+    font-size: 10px;
+    color: #b3b3b3;
 }
 .dropdown-symbol {
     align-items: center;
@@ -42,9 +55,14 @@ html body {
 }
 .copy-clipboard {
     align-items: center;
-    margin-left: 15px;
-    padding-right: 15px;
+    display: flex;
+    padding:5px 10px 5px 10px;
+    margin:5px 10px 5px 10px;
     cursor: pointer;
+    border-radius: 8px;
+}
+.copy-clipboard:hover {
+    background-color: gray;
 }
 
 /* Toolbar */
@@ -100,7 +118,7 @@ html body {
     font-size: 12px;
     visibility: visible;
 }
-.dropdown-carat {
+.dropdown-caret {
     position: absolute;
     z-index: 2;
     bottom: 1px;
@@ -112,8 +130,8 @@ html body {
     position: absolute;
     flex-direction: row;
     justify-content: space-between;
-    top: 10px;
-    left: 60px;
+    top: 5px;
+    left: 45px;
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
