--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -73,21 +73,10 @@
                 </div>
                 <span class="tool-tip-text">Sizes</span>
             </i>
-            <div class="size-menu dropdown-menu flex-container">
-                <div id="pen-1" class="dropdown-item" (click)="changeSize($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="pen-2" class="dropdown-item" (click)="changeSize($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="pen-3" class="dropdown-item" (click)="changeSize($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="pen-4" class="dropdown-item" (click)="changeSize($event)">
-                    <i class="fa fa-circle"></i>
-                </div>
-                <div id="pen-5" class="dropdown-item" (click)="changeSize($event)">
-                    <i class="fa fa-circle"></i>
+            <div class="slider-menu dropdown-menu flex-container">
+                <div id="pen-slider-value" class="slider-value"></div>
+                <div class="slider-box">
+                    <input id="pen-size-slider" type="range" class="slider" min="1" max="6" value="2" (input)="changeSize($event)">
                 </div>
             </div>
         </div>
